[project]
name = "dh-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "John_Soi",email = "un.perso@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dh_platform", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
