[project]
name = "dh-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "John_Soi",email = "un.perso@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi (>=0.116.2,<0.117.0)"
]

[tool.poetry]
packages = [{include = "dh_platform", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.8"
black = "^25.1.0"
isort = "^6.0.1"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ['py310']
